<resources>
    <string name="app_name">EsTer</string>

    <string name="btn_connect">Conectar</string>
    <string name="btn_exercises">Exercícios</string>
    <string name="btn_profile">Perfil</string>
    <string name="btn_news">Notícias</string>

    <string name="email_title">Email</string>
    <string name="sex_title">Sexo</string>
    <string name="username">Jorge</string>
    <string name="user_email">jorge@gmail.com</string>
    <string name="user_sex">jorge@gmail.com</string>
    <string name="user_age">89 anos</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- Profile strings -->
    <string name="logout">Sair</string>

    <!-- Strap strings -->
    <string name="strap_rest_title">Repouso</string>
    <string name="strap_rest_desc">Permaneça sentado com os braços abaixados por 10 segundos.</string>
    <string name="strap_postural_title">Postural</string>
    <string name="strap_postural_desc">Permaneça sentado com os braços esticados na altura do ombro por 10 segundos.</string>
    <string name="strap_fingernose_title">Dedo-nariz</string>
    <string name="strap_fingernose_desc">Permaneça sentado com o braço na altura do nariz por 10 segundos.</string>
    <string name="strap_about_title">Sobre os testes</string>
    <string name="btn_start">Começar</string>

    <string name="btn_stop">Sair</string>
    <string name="btn_demo">Ver demonstração</string>
    <string name="btn_demo2">Ouvir demonstração</string>
    <string name="btn_info">Como jogar</string>


    <!-- Cognitive exercise strings -->
    <string name="cognitive_exercise_desc">Selecione a opção que representa a cor da palavra</string>

    <!-- Exercises strings -->
    <string name="exercise_in_progress">Exercício em andamento</string>
    <string name="exercise_desc">A demonstração será exibida abaixo.
        \nEm seguida, clique em COMEÇAR para dar início ao exercício.
        \nLembre-se de clicar nos botões dos dois controladores.</string>
    <string name="btn_exercise_sound">Som</string>
    <string name="btn_exercise_color">Cores</string>
    <string name="btn_exercise_cognitive">Cognitivo</string>
    <string name="btn_exercise_strap">Strap</string>

    <string name="dash">-</string>


</resources>
