<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:backgroundTint="@color/colorPrimaryDark"
    tools:context=".Controller.ExercisesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <Button
            android:id="@+id/btn_ex1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn_stroked"
            android:drawableRight="@drawable/ic_ex1"
            android:text="@string/btn_exercise_sound"
            android:textColor="#4f4f4f"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_ex2"
            app:layout_constraintTop_toTopOf="@+id/guideline13"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="40dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_ex2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_btn_stroked"
            android:drawableRight="@drawable/ic_ex2"
            android:text="@string/btn_exercise_color"
            android:textColor="#4f4f4f"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_ex3"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_ex3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn_stroked"
            android:drawableRight="@drawable/ic_ex3"
            android:text="@string/btn_exercise_cognitive"
            android:textColor="#4f4f4f"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_ex4"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginBottom="24dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_ex4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn_stroked"
            android:drawableRight="@drawable/ic_ex4"
            android:text="@string/btn_exercise_strap"
            android:textColor="#4f4f4f"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline11"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp"
            android:padding="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffffff"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="110dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="196dp"
            android:layout_height="62dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline20"
            app:srcCompat="@drawable/ic_ester" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>